--- a/results/01_tss_cpg_status.Rmd
+++ b/results/01_tss_cpg_status.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "CpG status of region surrounding TSS"
+title: "Step 1: CpG status of region surrounding TSS"
 author: "Florence Pittion, Florent Chuffart"
 date: "`r Sys.Date()`"
 output: 
