--- a/results/03_da_GSE5816.Rmd
+++ b/results/03_da_GSE5816.Rmd
@@ -64,53 +64,84 @@ idx_2lo=rownames(s$exp_grp)[s$exp_grp$treatment_5aza%in%"2lo"]
 idx_3hi=rownames(s$exp_grp)[s$exp_grp$treatment_5aza%in%"3hi"]
 
 
-#t test apparié group control et group high
-pval = c()
-beta = c()
-for (i in 1:nrow(s$data)){
-  x <- s$data[i,idx_1ct]
-  y <- s$data[i,idx_3hi]
-  beta=c(beta,mean(y-x))
-  pval=c(pval, t.test(x,y, paired = TRUE)$p.value)
+# #t test apparié group control et group high
+# pval = c()
+# beta = c()
+# for (i in 1:nrow(s$data)){
+#   x <- s$data[i,idx_1ct]
+#   y <- s$data[i,idx_3hi]
+#   beta=c(beta,mean(y-x))
+#   pval=c(pval, t.test(x,y, paired = TRUE)$p.value)
+# }
+# pval
+# beta
+# plot(beta, -log10(pval))
+
+# #meme chose avec apply
+# stats = apply(s$data, 1, function(l){
+#   x <- l[idx_1ct]
+#   y <- l[idx_3hi]
+#   beta = mean(y-x)
+#   pval = t.test(x,y, paired = TRUE)$p.value
+#   ret = c(beta=beta, pval=pval)
+#   return(ret)
+# })
+
+
+# #comparaison graph pval/padj(avec BH)
+# stats=t(stats)
+# stats = data.frame(stats)
+# stats$padj = p.adjust(stats$pval, method = "BH")
+# layout(matrix(1:2,1), respect = TRUE)
+# plot(stats$beta,-log10(stats$pval), pch=".")
+# plot(stats$beta,-log10(stats$padj), pch=".")
+
+# # la même chose avec lm
+# stats2 = apply(s$data, 1, function(l){
+#   #l = s$data[1,]
+#   d$expr = l[c(idx_1ct, idx_3hi)]
+#   m = lm(expr~treatment_5aza+cell_line, d)
+#   beta = m$coefficients[[2]]
+#   pval = anova(m)[1,5]
+#   ret = c(beta=beta, pval=pval)
+#   return(ret)
+# })
+# stats2 = t(stats2)
+# stats2 = data.frame(stats2)
+# stats2$padj = p.adjust(stats2$pval, method = "BH")
+# layout(matrix(1:2,1), respect = TRUE)
+# plot(stats2$beta,-log10(stats2$pval), pch=".")
+# abline(h=-log10(0.05), v=c(-1,1), lty=2,col=2)
+# plot(stats2$beta,-log10(stats2$padj), pch=".")
+# abline(h=-log10(0.05), v=c(-1,1), lty=2,col=2)
+
+# plot(stats$beta, stats2$beta)
+# plot(-log10(stats$pval), -log10(stats2$pval))
+
+
+# memoisation
+
+compute_anadiff = function(s, idx_1ct, idx_3hi) {
+  d = data.frame(treatment_5aza=s$exp_grp[c(idx_1ct,idx_3hi), "treatment_5aza"], cell_line=s$exp_grp[c(idx_1ct,idx_3hi), "cell_line" ])
+  stats2 = epimedtools::monitored_apply(s$data, 1, function(l){
+    #l = s$data[1,]
+    d$expr = l[c(idx_1ct, idx_3hi)]
+    m = lm(expr~treatment_5aza+cell_line, d)
+    beta = m$coefficients[[2]]
+    pval = anova(m)[1,5]
+    ret = c(beta=beta, pval=pval)
+    return(ret)
+  })
+  return(stats2)  
 }
-pval
-beta
-plot(beta, -log10(pval))
 
-#meme chose avec apply
-stats = apply(s$data, 1, function(l){
-  x <- l[idx_1ct]
-  y <- l[idx_3hi]
-  beta = mean(y-x)
-  pval = t.test(x,y, paired = TRUE)$p.value
-  ret = c(beta=beta, pval=pval)
-  return(ret)
-})
+# stats2 = compute_anadiff(s, idx_1ct, idx_3hi)
+
+if (!exists("mcompute_anadiff")) {mcompute_anadiff = memoise::memoise(compute_anadiff)}
+
+stats2 = mcompute_anadiff(s, idx_1ct, idx_3hi)
 
 
-#comparaison graph pval/padj(avec BH)
-stats=t(stats)
-stats = data.frame(stats)
-stats$padj = p.adjust(stats$pval, method = "BH")
-layout(matrix(1:2,1), respect = TRUE)
-plot(stats$beta,-log10(stats$pval), pch=".")
-plot(stats$beta,-log10(stats$padj), pch=".")
-
-
-
-#regression lineaire
-d = data.frame(treatment_5aza=s$exp_grp[c(idx_1ct,idx_3hi), "treatment_5aza"], cell_line=s$exp_grp[c(idx_1ct,idx_3hi), "cell_line" ])
-
-stats2 = apply(s$data, 1, function(l){
-  #l = s$data[1,]
-  d$expr = l[c(idx_1ct, idx_3hi)]
-  m = lm(expr~treatment_5aza+cell_line, d)
-  beta = m$coefficients[[2]]
-  pval = anova(m)[1,5]
-  ret = c(beta=beta, pval=pval)
-  return(ret)
-  
-})
 stats2 = t(stats2)
 stats2 = data.frame(stats2)
 stats2$padj = p.adjust(stats2$pval, method = "BH")
@@ -125,30 +156,23 @@ plot(-log10(stats$pval), -log10(stats2$pval))
 ```
 
 
-```{r}
-# #add columns
-# feats$aza_beta = NA #rajout col log2foldchange
-# feats[rownames(stats2),]$aza_beta = stats2$beta
-# feats$aza_padj = NA #rajout col padj
-# feats[rownames(stats2),]$aza_padj = stats2$padj
-```
 
 
 
 # Results
 
 
-```{r volcano_plot}
+```{r}
 gse = "GSE5816"
 feats[,paste0("l2fc_", gse)] = NA
 feats[,paste0("pval_", gse)] = NA
 feats[,paste0("l2fc_", gse)] = stats2[rownames(feats),]$beta
 feats[,paste0("pval_", gse)] = stats2[rownames(feats),]$padj
-plot_volcano(feats, gs_methplusplus, gse)
 ```
 
 
-
+```{r child="03_da_results.Rmd"}
+```
 
 # Session Information
 
