--- a/results/00_dmethr_pipeline.Rmd
+++ b/results/00_dmethr_pipeline.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Full pipeline"
+title: "`demethr` full pipeline"
 author: "Florence Pittion, Florent Chuffart"
 date: "`r Sys.Date()`"
 output: 
@@ -16,11 +16,23 @@ output:
 knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, eval=TRUE, echo=FALSE, results="hide", warning=FALSE)
 ```
 
+
+```{r child="01_tss_cpg_status.Rmd"}
+```
+
+```{r child="02_mapreduce_mean.Rmd"}
+```
+
 ```{r child="03_da_GSE45332.Rmd"}
 ```
 
 ```{r child="03_da_GSE5816.Rmd"}
 ```
+
+```{r child="04_results.Rmd"}
+```
+
+
 
 # Session Information
 
