--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -227,13 +227,25 @@ s_cnv   = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_cnv.rds"))
 s_meth  = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_meth.rds"))
 s_trscr = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
 
-for (gene_symbol in gene_symbols) {
+for (gene_symbol in gene_symbols[1:6]) {
   print(gene_symbol)
   # mdata = get_multiomic_data(gene_symbols=gene_symbol, tcga_project=tcga_project)  
   try(momic_pattern(gene_symbol, tcga_project))
 }
 ```
 
+
+
+
+```{r}
+s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
+for (gene_symbol in gene_symbols[1:6]) {
+  idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
+  ss = s$exp_grp[idx_sample,]$os
+  v = s$data[gene_symbol, idx_sample]
+  epimedtools::plot_survival_panel_simple2(ss=ss, v=v, main=gene_symbol)
+}  
+```
 
 
 
