--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -227,7 +227,7 @@ s_cnv   = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_cnv.rds"))
 s_meth  = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_meth.rds"))
 s_trscr = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
 
-for (gene_symbol in gene_symbols[1:6]) {
+for (gene_symbol in ) {
   print(gene_symbol)
   # mdata = get_multiomic_data(gene_symbols=gene_symbol, tcga_project=tcga_project)  
   try(momic_pattern(gene_symbol, tcga_project))
@@ -237,9 +237,9 @@ for (gene_symbol in gene_symbols[1:6]) {
 
 
 
-```{r}
+```{r survival}
 s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
-for (gene_symbol in gene_symbols[1:6]) {
+for (gene_symbol in gene_symbols[1:min(6, length(gene_symbols))]) {
   idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
   ss = s$exp_grp[idx_sample,]$os
   v = s$data[gene_symbol, idx_sample]
