--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -231,7 +231,7 @@ s_cnv   = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_cnv.rds"))
 s_meth  = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_meth.rds"))
 s_trscr = mreadstudyRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
 
-for (gene_symbol in ) {
+for (gene_symbol in gene_symbols[1:min(6, length(gene_symbols))]) {
   print(gene_symbol)
   # mdata = get_multiomic_data(gene_symbols=gene_symbol, tcga_project=tcga_project)  
   try(momic_pattern(gene_symbol, tcga_project))
