--- a/results/01_tss_cpg_status.Rmd
+++ b/results/01_tss_cpg_status.Rmd
@@ -338,13 +338,15 @@ feats[rownames(mat),]$cpg_density = apply(mat, 1, mean)
 ```{r}
 i=1
 for (j in 2:3) {
+  threshs_i = quantile(pca$x[,i], c(1/3, 2/3))
+  threshs_j = quantile(pca$x[,j], c(1/3, 2/3))
+
   layout(1, respect=TRUE)
-  plot(pca$x[,i], pca$x[,j], xlab=paste0("PC", i, "(", signif(p[i], 3), "%)"), ylab=paste0("PC", j, "(", signif(p[j], 3), "%)"), pch=16, col=col=feats[rownames(pca$x),]$cpg_status%in%"rich"+1)
+  plot(pca$x[,i], pca$x[,j], xlab=paste0("PC", i, "(", signif(p[i], 3), "%)"), ylab=paste0("PC", j, "(", signif(p[j], 3), "%)"), pch=16, col=feats[rownames(pca$x),]$cpg_status%in%"rich"+1)
+  abline(v=threshs_i, h=threshs_j, col="grey", lty=2)
 
   layout(matrix(1:9, 3, byrow=FALSE), respect=TRUE)
 
-  threshs_i = quantile(pca$x[,i], c(1/3, 2/3))
-  threshs_j = quantile(pca$x[,j], c(1/3, 2/3))
 
   idx_i = idx_j = list()
   idx_i[[1]] = rownames(pca$x)[pca$x[,i] <  threshs_i[1]]
